[gd_scene load_steps=11 format=1]

[ext_resource path="res://scenes/play_menu.gd" type="Script" id=1]
[ext_resource path="res://assets/pop up play.png" type="Texture" id=2]
[ext_resource path="res://tema_ui.tres" type="Theme" id=3]
[ext_resource path="res://assets/fonts/Enlighten your Destiny.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/fonts/papercuts-2.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]

font/size = 64
extra_spacing/bottom = 8
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]

font/size = 40
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]

font/size = 36
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]

font/size = 32
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]

font/size = 29
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 5 )

[node name="play_menu" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 500.0
margin/top = 390.0
margin/right = 540.0
margin/bottom = 430.0
script/script = ExtResource( 1 )

[node name="Background" type="CanvasLayer" parent="."]

editor/display_folded = true
layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="Sprite" type="Sprite" parent="Background"]

transform/pos = Vector2( 511.594, 362 )
transform/scale = Vector2( 0.911754, 0.911839 )
texture = ExtResource( 2 )

[node name="container_tombol_utama" type="ReferenceFrame" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="exit_button" type="Button" parent="container_tombol_utama"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 171.0
margin/top = -329.0
margin/right = 241.0
margin/bottom = -251.0
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "X"
flat = false

[node name="new_button" type="Button" parent="container_tombol_utama"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = -90.0
margin/top = -140.0
margin/right = 90.0
margin/bottom = -50.0
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "New"
flat = false

[node name="continue_button" type="Button" parent="container_tombol_utama"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = -90.0
margin/top = -10.0
margin/right = 90.0
margin/bottom = 80.0
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Continue"
flat = false

[node name="container_tombol_new" type="ReferenceFrame" parent="."]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="mainkan_button" type="Button" parent="container_tombol_new"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 30.0
margin/top = 170.0
margin/right = 210.0
margin/bottom = 260.0
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Play"
flat = false

[node name="cancel_button" type="Button" parent="container_tombol_new"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = -180.0
margin/top = 170.0
margin/right = 0.0
margin/bottom = 260.0
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Cancel"
flat = false

[node name="username_input" type="TextEdit" parent="container_tombol_new"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -170.0
margin/top = -70.0
margin/right = 200.0
margin/bottom = 0.0
custom_fonts/font = SubResource( 2 )
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
caret/block_caret = false
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="Label" type="Label" parent="container_tombol_new"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -170.0
margin/top = -150.0
margin/right = 87.0
margin/bottom = -55.0
custom_fonts/font = SubResource( 3 )
text = "Username:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="container_tombol_continue" type="ReferenceFrame" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Label" type="Label" parent="container_tombol_continue"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -80.0
margin/top = -240.0
margin/right = 90.0
margin/bottom = -184.0
custom_fonts/font = SubResource( 4 )
text = "Profile List"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="current_player" type="Label" parent="container_tombol_continue"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -170.0
margin/top = 90.0
margin/right = 199.0
margin/bottom = 138.0
custom_fonts/font = SubResource( 4 )
text = "CHOOSE FROM LIST ABOVE"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="VBoxContainer" type="ScrollContainer" parent="container_tombol_continue"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -90.0
margin/top = -160.0
margin/right = 170.0
margin/bottom = -110.0
scroll/horizontal = false
scroll/vertical = true

[node name="user1" type="Button" parent="container_tombol_continue/VBoxContainer"]

rect/min_size = Vector2( 190, 50 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 190.0
margin/bottom = 50.0
custom_fonts/font = SubResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Paimin"
flat = false

[node name="cancel_button" type="Button" parent="container_tombol_continue"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 171.0
margin/top = -329.0
margin/right = 241.0
margin/bottom = -251.0
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "X"
flat = false

[node name="delete_button" type="Button" parent="container_tombol_continue"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = -190.0
margin/top = 160.0
margin/right = -10.0
margin/bottom = 250.0
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Delete"
flat = false

[node name="continue_button" type="Button" parent="container_tombol_continue"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 30.0
margin/top = 160.0
margin/right = 210.0
margin/bottom = 250.0
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Continue"
flat = false

[node name="container_error" type="ReferenceFrame" parent="."]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="ok_button" type="Button" parent="container_error"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = -70.0
margin/top = 70.0
margin/right = 110.0
margin/bottom = 160.0
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "OK"
flat = false

[node name="Label" type="Label" parent="container_error"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -180.0
margin/top = -170.0
margin/right = 200.0
margin/bottom = 40.0
custom_fonts/font = SubResource( 3 )
text = "Cannot use %s as your username!"
align = 1
autowrap = true
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="container_tombol_utama/exit_button" to="." method="_on_exit_pressed"]

[connection signal="pressed" from="container_tombol_utama/new_button" to="." method="_on_new_button_pressed"]

[connection signal="pressed" from="container_tombol_utama/continue_button" to="." method="_on_continue_button_utama_pressed"]

[connection signal="pressed" from="container_tombol_new/mainkan_button" to="." method="_on_mainkan_button_pressed"]

[connection signal="pressed" from="container_tombol_continue/delete_button" to="." method="_on_delete_button_pressed"]

[connection signal="pressed" from="container_tombol_continue/continue_button" to="." method="_on_continue_button_pressed"]

[connection signal="pressed" from="container_error/ok_button" to="." method="_on_ok_error_button_pressed"]


